--- a/package.json
+++ b/package.json
@@ -27,5 +27,12 @@
 		"vite": "^5.0.3"
 	},
 	"type": "module",
-	"packageManager": "pnpm@8.15.1+sha1.8adba2d20330c02d3856e18c4eb3819d1d3ca6aa"
+	"packageManager": "pnpm@8.15.1+sha1.8adba2d20330c02d3856e18c4eb3819d1d3ca6aa",
+	"dependencies": {
+		"bits-ui": "^0.21.16",
+		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.451.0",
+		"tailwind-merge": "^2.5.3",
+		"tailwind-variants": "^0.2.1"
+	}
 }
