--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"dependencies": {
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
+		"ioredis": "^5.4.1",
 		"lucide-svelte": "^0.451.0",
 		"tailwind-merge": "^2.5.3",
 		"tailwind-variants": "^0.2.1"
