--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"packageManager": "pnpm@8.15.1+sha1.8adba2d20330c02d3856e18c4eb3819d1d3ca6aa",
 	"dependencies": {
 		"bits-ui": "^0.21.16",
+		"chart.js": "^4.4.4",
 		"clsx": "^2.1.1",
 		"ioredis": "^5.4.1",
 		"lucide-svelte": "^0.451.0",
