--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"bits-ui": "^0.21.16",
 		"chart.js": "^4.4.4",
 		"clsx": "^2.1.1",
+		"dayjs": "^1.11.13",
 		"ioredis": "^5.4.1",
 		"lucide-svelte": "^0.451.0",
 		"tailwind-merge": "^2.5.3",
